{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 689,
  "lineage": "19e88afc-aff5-3b98-f091-264031766b7c",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_alb",
      "name": "OneCampusALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:loadbalancer/app/OneCampusALB/dccc5ad785b060c6",
            "arn_suffix": "app/OneCampusALB/dccc5ad785b060c6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-OneCampusALB-191370931.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:loadbalancer/app/OneCampusALB/dccc5ad785b060c6",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "OneCampusALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-066d64f1085cd50a8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005871f3cabd25ee3"
              },
              {
                "subnet_id": "subnet-0284f4c0448c2c653"
              }
            ],
            "subnets": [
              "subnet-005871f3cabd25ee3",
              "subnet-0284f4c0448c2c653"
            ],
            "vpc_id": "vpc-0f4173de568606c64",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.networking.aws_security_group.All_Open",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04701ac2f44e133ff",
            "domain": "vpc",
            "id": "eipalloc-04701ac2f44e133ff",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-255-133.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.255.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:internet-gateway/igw-07fe10b9cab3c124e",
            "id": "igw-07fe10b9cab3c124e",
            "owner_id": "866681751834",
            "tags": {
              "Environment": "OneCampus",
              "Name": "OneCampus-igw"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "OneCampus-igw"
            },
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "OneCampusAPI-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:listener/app/OneCampusALB/dccc5ad785b060c6/3ed8d3184e54e93f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:targetgroup/OneCampusAPI-TG/89c0adbc618e7e5b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:listener/app/OneCampusALB/dccc5ad785b060c6/3ed8d3184e54e93f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:loadbalancer/app/OneCampusALB/dccc5ad785b060c6",
            "mutual_authentication": [],
            "port": 81,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_alb.OneCampusALB",
            "module.networking.aws_lb_target_group.OneCampusAPI-TG",
            "module.networking.aws_security_group.All_Open",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "OneCampusUI-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:listener/app/OneCampusALB/dccc5ad785b060c6/c20d3d3a49558d6d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:targetgroup/OneCampusUI-TG/b93453434f878c64",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:listener/app/OneCampusALB/dccc5ad785b060c6/c20d3d3a49558d6d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:loadbalancer/app/OneCampusALB/dccc5ad785b060c6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_alb.OneCampusALB",
            "module.networking.aws_lb_target_group.OneCampusUI-TG",
            "module.networking.aws_security_group.All_Open",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "OneCampusAPI-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:targetgroup/OneCampusAPI-TG/89c0adbc618e7e5b",
            "arn_suffix": "targetgroup/OneCampusAPI-TG/89c0adbc618e7e5b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/OneCampus/src/OneCampus.Api/Monitoring/HealthCheck.cs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:targetgroup/OneCampusAPI-TG/89c0adbc618e7e5b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "OneCampusAPI-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "OneCampusUI-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:targetgroup/OneCampusUI-TG/b93453434f878c64",
            "arn_suffix": "targetgroup/OneCampusUI-TG/b93453434f878c64",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:866681751834:targetgroup/OneCampusUI-TG/b93453434f878c64",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "OneCampusUI-TG",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04701ac2f44e133ff",
            "association_id": "eipassoc-03f46e1eba75fb483",
            "connectivity_type": "public",
            "id": "nat-0a130ba6029b8d9cf",
            "network_interface_id": "eni-05eabd839c9435d36",
            "private_ip": "10.0.2.59",
            "public_ip": "15.188.255.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b6033fe5295438d9",
            "tags": {
              "Environment": "OneCampus",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0862c86c678ac81671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a130ba6029b8d9cf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0862c86c678ac8167",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07fe10b9cab3c124e",
            "id": "r-rtb-0920d852f89c9296a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0920d852f89c9296a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:route-table/rtb-0862c86c678ac8167",
            "id": "rtb-0862c86c678ac8167",
            "owner_id": "866681751834",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "OneCampus",
              "Name": "OneCampus-private-route-table"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "OneCampus-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:route-table/rtb-0920d852f89c9296a",
            "id": "rtb-0920d852f89c9296a",
            "owner_id": "866681751834",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "OneCampus",
              "Name": "OneCampus-public-route-table"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "OneCampus-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036460cf999689277",
            "route_table_id": "rtb-0862c86c678ac8167",
            "subnet_id": "subnet-005871f3cabd25ee3"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c8be09cfb89a081",
            "route_table_id": "rtb-0862c86c678ac8167",
            "subnet_id": "subnet-0284f4c0448c2c653"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01aed5677e72a657f",
            "route_table_id": "rtb-0920d852f89c9296a",
            "subnet_id": "subnet-0b6033fe5295438d9"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e6dabfa9af48c20",
            "route_table_id": "rtb-0920d852f89c9296a",
            "subnet_id": "subnet-08e52e35dc2d722b0"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "All_Open",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:security-group/sg-066d64f1085cd50a8",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-066d64f1085cd50a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 81
              }
            ],
            "name": "All_Open",
            "name_prefix": "",
            "owner_id": "866681751834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "OneCampus"
            },
            "tags_all": {
              "Environment": "OneCampus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:subnet/subnet-005871f3cabd25ee3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005871f3cabd25ee3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866681751834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "OneCampus",
              "Name": "OneCampus-eu-west-3a-private-subnet"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "OneCampus-eu-west-3a-private-subnet"
            },
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:subnet/subnet-0284f4c0448c2c653",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0284f4c0448c2c653",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866681751834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "OneCampus",
              "Name": "OneCampus-eu-west-3c-private-subnet"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "OneCampus-eu-west-3c-private-subnet"
            },
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:subnet/subnet-0b6033fe5295438d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6033fe5295438d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866681751834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "OneCampus",
              "Name": "OneCampus-eu-west-3a-      public-subnet"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "OneCampus-eu-west-3a-      public-subnet"
            },
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:subnet/subnet-08e52e35dc2d722b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e52e35dc2d722b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866681751834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "OneCampus",
              "Name": "OneCampus-eu-west-3c-      public-subnet"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "OneCampus-eu-west-3c-      public-subnet"
            },
            "vpc_id": "vpc-0f4173de568606c64"
          },
          "dependencies": [
            "module.networking.aws_vpc.OneCampusVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "OneCampusVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:866681751834:vpc/vpc-0f4173de568606c64",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085f16a559d905e71",
            "default_route_table_id": "rtb-0fa0d121d8f21d48c",
            "default_security_group_id": "sg-04b965235224d6732",
            "dhcp_options_id": "dopt-0018e34da4cf38258",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4173de568606c64",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa0d121d8f21d48c",
            "owner_id": "866681751834",
            "tags": {
              "Environment": "OneCampus",
              "Name": "OneCampusVPC"
            },
            "tags_all": {
              "Environment": "OneCampus",
              "Name": "OneCampusVPC"
            }
          }
        }
      ]
    }
  ]
}